--- a/docs/content/Cube.js-Introduction.mdx
+++ b/docs/content/Cube.js-Introduction.mdx
@@ -38,4 +38,4 @@ __Cube.js acts as an analytics backend__, translating business logic (metrics an
 
 The Cube.js javascript Client performs queries, expressed via dimensions, measures, and filters. The Server uses Cube.js Schema to generate a SQL code, which is executed by your database. The Server handles all the database connection, as well as pre-aggregations and caching layers. The result then sent back to the Client. The Client itself is visualization agnostic and works well with any chart library.
 
-<p align="center"><img src="https://i.imgur.com/FluGFqo.png" alt="Cube.js" width="100%"></p>
+<p align="center"><img src="https://i.imgur.com/FluGFqo.png" alt="Cube.js" width="100%" /></p>
