--- a/docs/content/Getting-Started/Overview.mdx
+++ b/docs/content/Getting-Started/Overview.mdx
@@ -7,6 +7,13 @@ menuOrder: 1
 
 Choose a platform to get started with below:
 
+<GitHubCodeBlock
+  href="https://github.com/YakovlevCoded/test/blob/master/test.js"
+  titleSuffixCount={2}
+  part={"test-value"}
+  lang="js"
+/>
+
 <div class="gettingStartedGrid">
   <div class="ant-row">
     <div class="gettingStartedItem ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-24 ant-col-xl-12">
